# nexuschain

./: Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
blockchain_sim/: apps.py  models.py  simulation.py  urls.py  views.py
blockchain_sim/core/: block.py  blockchain.py  config.py  identity_management.py  monitoring.py  network.py  node.py  simulation_engine.py  transaction.py  utils.py
blockchain_sim/core/consensus/: pbft.py  poa.py  pos.py
blockchain_sim/migrations/: 0001_initial.py
blockchain_sim/templates/: dashboard.html  node_detail.html
nexus_block/: asgi.py  settings.py  urls.py  wsgi.py
